// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`input decoding optional query and header params 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { Item } from "./models.js";

const ItemsInput = {
  list: RequestDecoders.combine(
    [
      RequestDecoders.query(
        "limit",
        Decoders.integer
          .validate(Validators.minValue(-2147483648), Validators.maxValue(2147483647))
          .optional(),
      ),
      RequestDecoders.query(
        "offset",
        Decoders.integer
          .validate(Validators.minValue(-2147483648), Validators.maxValue(2147483647))
          .optional(),
      ),
      RequestDecoders.header("x-request-id", Decoders.string.optional()),
    ],
    (limit, offset, requestId) => ({ limit, offset, requestId }),
  ),
};

const ItemsOutput = {
  list: ResponseEncoders.json<Item[]>(200),
};

export const ItemsOperations = {
  list: {
    endpoint: {
      service: { name: "ParamsApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "list",
        operationId: "Items.list",
        method: "GET" as const,
        path: "/items",
        routePattern: { segments: [[{ kind: "literal", value: "items" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ limit?: number; offset?: number; requestId?: string }>(
        ItemsInput.list,
        request,
        pathParams,
      ),
    encodeResult: (result: Item[]) => ItemsOutput.list.encode(result),
  } satisfies ServerOperation<{ limit?: number; offset?: number; requestId?: string }, Item[]>,
} as const;
"
`;

exports[`input decoding optional query and header params 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type { Item } from "./models.js";

export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly list: OperationHandler<
    { limit?: number; offset?: number; requestId?: string },
    Item[],
    Ctx
  >;
}

export interface ParamsApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`input decoding validation decorators become runtime validators 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { CreateItem } from "./models.js";

const ItemsInput = {
  list: RequestDecoders.combine(
    [
      RequestDecoders.query(
        "limit",
        Decoders.integer
          .validate(Validators.minValue(-2147483648), Validators.maxValue(2147483647))
          .validate(Validators.minValue(1), Validators.maxValue(100)),
      ),
      RequestDecoders.query(
        "ratio",
        Decoders.number.validate(Validators.minValueExclusive(0), Validators.maxValueExclusive(1)),
      ),
    ],
    (limit, ratio) => ({ limit, ratio }),
  ),
  read: RequestDecoders.path(
    "itemId",
    Decoders.bigint
      .validate(
        Validators.minValue(-9223372036854775808n),
        Validators.maxValue(9223372036854775807n),
      )
      .validate(Validators.minValue(1n)),
  ).map((itemId) => ({ itemId })),
  create: {
    json: Decoders.object<CreateItem>(
      {
        name: Decoders.string.validate(
          Validators.minLength(1),
          Validators.maxLength(20),
          Validators.pattern("^[A-Z].*", "Must start with uppercase."),
        ),
        tags: Decoders.strictArray(Decoders.string).validate(
          Validators.minItems(1),
          Validators.maxItems(3),
        ),
        count: Decoders.strictInteger
          .validate(Validators.minValue(-2147483648), Validators.maxValue(2147483647))
          .validate(Validators.minValue(0)),
      },
      { allowUnknown: true },
    ),
  },
};

const ItemsOutput = {
  list: ResponseEncoders.json<CreateItem[]>(200),
  read: ResponseEncoders.json<CreateItem>(200),
  create: ResponseEncoders.json<CreateItem>(200),
};

export const ItemsOperations = {
  list: {
    endpoint: {
      service: { name: "ValidationApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "list",
        operationId: "Items.list",
        method: "GET" as const,
        path: "/items",
        routePattern: { segments: [[{ kind: "literal", value: "items" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ limit: number; ratio: number }>(ItemsInput.list, request, pathParams),
    encodeResult: (result: CreateItem[]) => ItemsOutput.list.encode(result),
  } satisfies ServerOperation<{ limit: number; ratio: number }, CreateItem[]>,

  read: {
    endpoint: {
      service: { name: "ValidationApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "read",
        operationId: "Items.read",
        method: "GET" as const,
        path: "/items/{itemId}",
        routePattern: {
          segments: [
            [{ kind: "literal", value: "items" }],
            [{ kind: "parameter", name: "itemId" }],
          ],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: bigint }>(ItemsInput.read, request, pathParams),
    encodeResult: (result: CreateItem) => ItemsOutput.read.encode(result),
  } satisfies ServerOperation<{ itemId: bigint }, CreateItem>,

  create: {
    endpoint: {
      service: { name: "ValidationApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Items.create",
        method: "POST" as const,
        path: "/items",
        routePattern: { segments: [[{ kind: "literal", value: "items" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<CreateItem>(request, ItemsInput.create, { contentTypes: ["application/json"] }),
    encodeResult: (result: CreateItem) => ItemsOutput.create.encode(result),
  } satisfies ServerOperation<CreateItem, CreateItem>,
} as const;
"
`;

exports[`input decoding path + query + body combined 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { Item, UpdatePayload } from "./models.js";

const ItemsInput = {
  updateRequest: RequestDecoders.combine(
    [
      RequestDecoders.path("itemId", Decoders.string),
      RequestDecoders.query("dryRun", Decoders.boolean.optional()),
    ],
    (itemId, dryRun) => ({ itemId, dryRun }),
  ),
  updateBody: {
    json: Decoders.object<UpdatePayload>(
      { name: Decoders.string, tags: Decoders.optional(Decoders.strictArray(Decoders.string)) },
      { allowUnknown: true },
    ),
  },
};

const ItemsOutput = {
  update: ResponseEncoders.json<Item>(200),
};

export const ItemsOperations = {
  update: {
    endpoint: {
      service: { name: "CombinedApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "update",
        operationId: "Items.update",
        method: "PUT" as const,
        path: "/items/{itemId}",
        routePattern: {
          segments: [
            [{ kind: "literal", value: "items" }],
            [{ kind: "parameter", name: "itemId" }],
          ],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request, pathParams) =>
      decodeRequestInputAndBody<{ itemId: string; dryRun?: boolean }, UpdatePayload>(
        ItemsInput.updateRequest,
        ItemsInput.updateBody,
        request,
        pathParams,
        { contentTypes: ["application/json"] },
      ),
    encodeResult: (result: Item) => ItemsOutput.update.encode(result),
  } satisfies ServerOperation<
    { itemId: string; dryRun?: boolean; name: string; tags?: string[] },
    Item
  >,
} as const;
"
`;

exports[`input decoding cookie parameters 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { Profile } from "./models.js";

const UsersInput = {
  me: RequestDecoders.combine(
    [
      RequestDecoders.cookie("session_id", Decoders.string),
      RequestDecoders.cookie("theme", Decoders.string.optional()),
    ],
    (sessionId, theme) => ({ sessionId, theme }),
  ),
};

const UsersOutput = {
  me: ResponseEncoders.json<Profile>(200),
};

export const UsersOperations = {
  me: {
    endpoint: {
      service: { name: "CookieApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "me",
        operationId: "Users.me",
        method: "GET" as const,
        path: "/profile",
        routePattern: { segments: [[{ kind: "literal", value: "profile" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ sessionId: string; theme?: string }>(UsersInput.me, request, pathParams),
    encodeResult: (result: Profile) => UsersOutput.me.encode(result),
  } satisfies ServerOperation<{ sessionId: string; theme?: string }, Profile>,
} as const;
"
`;

exports[`input decoding cookie parameters 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type { Profile } from "./models.js";

export interface UsersServer<Ctx = MatchedRequestContext> {
  readonly me: OperationHandler<{ sessionId: string; theme?: string }, Profile, Ctx>;
}

export interface CookieApiServer<Ctx = MatchedRequestContext> {
  readonly Users: UsersServer<Ctx>;
}
"
`;

exports[`input decoding recursive model uses Decoders.lazy 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { TreeNode } from "./models.js";

const _lazy16_TreeInput_create_8_TreeNode_json: Decoder<TreeNode> = Decoders.lazy(() =>
  Decoders.object<TreeNode>(
    {
      value: Decoders.string,
      children: Decoders.optional(Decoders.strictArray(_lazy16_TreeInput_create_8_TreeNode_json)),
    },
    { allowUnknown: true },
  ),
);

const TreeInput = {
  create: {
    json: Decoders.object<TreeNode>(
      {
        value: Decoders.string,
        children: Decoders.optional(Decoders.strictArray(_lazy16_TreeInput_create_8_TreeNode_json)),
      },
      { allowUnknown: true },
    ),
  },
};

const TreeOutput = {
  create: ResponseEncoders.json<TreeNode>(200),
};

export const TreeOperations = {
  create: {
    endpoint: {
      service: { name: "TreeApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Tree.create",
        method: "POST" as const,
        path: "/tree",
        routePattern: { segments: [[{ kind: "literal", value: "tree" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<TreeNode>(request, TreeInput.create, { contentTypes: ["application/json"] }),
    encodeResult: (result: TreeNode) => TreeOutput.create.encode(result),
  } satisfies ServerOperation<TreeNode, TreeNode>,
} as const;
"
`;

exports[`input decoding multipart body with file, multi-valued, and optional parts 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { UploadResult } from "./models.js";

const UploadsInput = {
  single: {
    multipart: Decoders.multipartFormData<{ name: string; file: File }>([
      {
        decoder: Decoders.string,
        kind: "text",
        contentTypes: ["text/plain"],
        name: "name",
        property: "name",
      },
      {
        decoder: Decoders.file,
        kind: "file",
        contentTypes: ["*/*"],
        name: "file",
        property: "file",
      },
    ]),
  },
  multi: {
    multipart: Decoders.multipartFormData<{ label: string; files: File[] }>([
      {
        decoder: Decoders.string,
        kind: "text",
        contentTypes: ["text/plain"],
        name: "label",
        property: "label",
      },
      {
        decoder: Decoders.file,
        kind: "file",
        contentTypes: ["*/*"],
        multi: true,
        name: "files",
        property: "files",
      },
    ]),
  },
  optional: {
    multipart: Decoders.multipartFormData<{ name: string; description?: string }>([
      {
        decoder: Decoders.string,
        kind: "text",
        contentTypes: ["text/plain"],
        name: "name",
        property: "name",
      },
      {
        decoder: Decoders.string,
        kind: "text",
        contentTypes: ["text/plain"],
        optional: true,
        name: "description",
        property: "description",
      },
    ]),
  },
};

const UploadsOutput = {
  single: ResponseEncoders.json<UploadResult>(200),
  multi: ResponseEncoders.json<UploadResult>(200),
  optional: ResponseEncoders.json<UploadResult>(200),
};

export const UploadsOperations = {
  single: {
    endpoint: {
      service: { name: "UploadApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "single",
        operationId: "Uploads.single",
        method: "POST" as const,
        path: "/upload/single",
        routePattern: {
          segments: [
            [{ kind: "literal", value: "upload" }],
            [{ kind: "literal", value: "single" }],
          ],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<{ name: string; file: File }>(request, UploadsInput.single, {
        contentTypes: ["multipart/form-data"],
      }),
    encodeResult: (result: UploadResult) => UploadsOutput.single.encode(result),
  } satisfies ServerOperation<{ name: string; file: File }, UploadResult>,

  multi: {
    endpoint: {
      service: { name: "UploadApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "multi",
        operationId: "Uploads.multi",
        method: "POST" as const,
        path: "/upload/multi",
        routePattern: {
          segments: [[{ kind: "literal", value: "upload" }], [{ kind: "literal", value: "multi" }]],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<{ label: string; files: File[] }>(request, UploadsInput.multi, {
        contentTypes: ["multipart/form-data"],
      }),
    encodeResult: (result: UploadResult) => UploadsOutput.multi.encode(result),
  } satisfies ServerOperation<{ label: string; files: File[] }, UploadResult>,

  optional: {
    endpoint: {
      service: { name: "UploadApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "optional",
        operationId: "Uploads.optional",
        method: "POST" as const,
        path: "/upload/optional",
        routePattern: {
          segments: [
            [{ kind: "literal", value: "upload" }],
            [{ kind: "literal", value: "optional" }],
          ],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<{ name: string; description?: string }>(request, UploadsInput.optional, {
        contentTypes: ["multipart/form-data"],
      }),
    encodeResult: (result: UploadResult) => UploadsOutput.optional.encode(result),
  } satisfies ServerOperation<{ name: string; description?: string }, UploadResult>,
} as const;
"
`;

exports[`input decoding multipart body with file, multi-valued, and optional parts 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type { UploadResult } from "./models.js";

export interface UploadsServer<Ctx = MatchedRequestContext> {
  readonly single: OperationHandler<{ name: string; file: File }, UploadResult, Ctx>;
  readonly multi: OperationHandler<{ label: string; files: File[] }, UploadResult, Ctx>;
  readonly optional: OperationHandler<{ name: string; description?: string }, UploadResult, Ctx>;
}

export interface UploadApiServer<Ctx = MatchedRequestContext> {
  readonly Uploads: UploadsServer<Ctx>;
}
"
`;

exports[`input decoding tagged unions dispatch via Decoders.discriminated 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { Cat, Circle, Dog, Left, Mixed, Pet, Right, Shape, Square } from "./models.js";

const ShapesInput = {
  create: {
    json: Decoders.discriminated<Shape>("kind", {
      circle: Decoders.object<Circle>(
        { kind: Decoders.strictLiteral("circle"), radius: Decoders.strictNumber },
        { allowUnknown: true },
      ),
      square: Decoders.object<Square>(
        { kind: Decoders.strictLiteral("square"), size: Decoders.strictNumber },
        { allowUnknown: true },
      ),
    }),
  },
  adopt: {
    json: Decoders.discriminated<Pet>("species", {
      cat: Decoders.object<Cat>(
        { species: Decoders.strictLiteral("cat"), meows: Decoders.strictBoolean },
        { allowUnknown: true },
      ),
      dog: Decoders.object<Dog>(
        { species: Decoders.strictLiteral("dog"), barks: Decoders.strictBoolean },
        { allowUnknown: true },
      ),
    }),
  },
  mix: {
    json: Decoders.union<Mixed>([
      Decoders.object<Left>({ value: Decoders.string }, { allowUnknown: true }),
      Decoders.object<Right>(
        {
          count: Decoders.strictInteger.validate(
            Validators.minValue(-2147483648),
            Validators.maxValue(2147483647),
          ),
        },
        { allowUnknown: true },
      ),
    ]),
  },
};

const ShapesOutput = {
  create: ResponseEncoders.json<Circle>(200),
  adopt: ResponseEncoders.json<Cat>(200),
  mix: ResponseEncoders.json<Left>(200),
};

export const ShapesOperations = {
  create: {
    endpoint: {
      service: { name: "ShapesApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Shapes.create",
        method: "POST" as const,
        path: "/shapes",
        routePattern: { segments: [[{ kind: "literal", value: "shapes" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<Shape>(request, ShapesInput.create, { contentTypes: ["application/json"] }),
    encodeResult: (result: Circle) => ShapesOutput.create.encode(result),
  } satisfies ServerOperation<Shape, Circle>,

  adopt: {
    endpoint: {
      service: { name: "ShapesApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "adopt",
        operationId: "Shapes.adopt",
        method: "POST" as const,
        path: "/shapes/pets",
        routePattern: {
          segments: [[{ kind: "literal", value: "shapes" }], [{ kind: "literal", value: "pets" }]],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<Pet>(request, ShapesInput.adopt, { contentTypes: ["application/json"] }),
    encodeResult: (result: Cat) => ShapesOutput.adopt.encode(result),
  } satisfies ServerOperation<Pet, Cat>,

  mix: {
    endpoint: {
      service: { name: "ShapesApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "mix",
        operationId: "Shapes.mix",
        method: "POST" as const,
        path: "/shapes/mixed",
        routePattern: {
          segments: [[{ kind: "literal", value: "shapes" }], [{ kind: "literal", value: "mixed" }]],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<Mixed>(request, ShapesInput.mix, { contentTypes: ["application/json"] }),
    encodeResult: (result: Left) => ShapesOutput.mix.encode(result),
  } satisfies ServerOperation<Mixed, Left>,
} as const;
"
`;
